[metadata]
name = trboxcmp
version = 0.0.5
author = Natalie
author_email = natalie@natnat.xyz
description = A collection of libraries to handle the XCMP protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.natnat.xyz/natalie/trboxcmp
project_urls =
    Bug Tracker = https://nowhere
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src